oauth2/oauth2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  selector:
    app: "oauth2-proxy"
  type: ClusterIP
  ports:
   - protocol: TCP
     port: 4180
     targetPort: 4180
     name: web
