oauth2/test-echo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-echo
  namespace: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "https://kubeapps.saashq.org/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://kubeapps.saashq.org/oauth2/start?rd=$scheme://$host$request_uri"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
spec:
  ingressClassName: nginx
  rules:
    - host: kubeapps.saashq.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port:
                  number: 80
  tls:
    - hosts:
        - kubeapps.saashq.org
      secretName: kubeapps-saashq-org-tls

---
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: kubeapps
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: kubeapps
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo1
          image: hashicorp/http-echo
          args:
            - "-text=echo1"
          ports:
            - containerPort: 5678
